--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,8 +12,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_launcher_background"
-        android:contentDescription="Welcome to productivity zone">
+        android:contentDescription="Welcome to productivity zone"
+        android:src="@drawable/ic_launcher_background">
 
     </ImageView>
 
@@ -28,10 +28,10 @@
         app:alliance_distanceMultiplier="4"
         app:alliance_dotsRadius="5dp"
         app:alliance_drawOnlyStroke="true"
-        app:alliance_firstDotsColor="#00daf8"
-        app:alliance_secondDotsColor="#00daf8"
+        app:alliance_firstDotsColor="#E91E63"
+        app:alliance_secondDotsColor="#FFEB3B"
         app:alliance_strokeWidth="8dp"
-        app:alliance_thirdDotsColor="#00daf8" />
+        app:alliance_thirdDotsColor="#2196F3" />
 
 
 </RelativeLayout>
