--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -24,13 +24,28 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="4dp"
+        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
         android:hint="Select here to choose the due date"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp"
         android:paddingTop="1dp"
+        android:paddingEnd="5dp"
         android:textColor="#00aac5"
         android:textColorHint="#0096ab"
         android:textSize="20sp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/time_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/date_picker"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/ic_baseline_access_time_24"
+        android:hint="Enter the due time"
+        android:textColor="#00aac5"
+        android:textColorHint="#0096ab"
+        android:textSize="20dp">
 
     </TextView>
 
@@ -38,7 +53,7 @@
         android:id="@+id/task_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/date_picker"
+        android:layout_below="@id/time_picker"
         android:layout_marginTop="10dp"
         android:hint="Type your task details here"
         android:textColor="#00aac5"
