--- a/app/src/main/res/layout/task_layout1.xml
+++ b/app/src/main/res/layout/task_layout1.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
-    android:elevation="5dp">
+    android:elevation="5dp"
+    app:cardBackgroundColor="?attr/task_layout1"
+    android:id="@+id/cardcolor">
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
