--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="37dp"
-        android:layout_marginBottom="117dp"
+        android:layout_marginBottom="200dp"
         android:backgroundTint="#00aac5"
         android:rotationX="8"
         android:src="@drawable/ic_baseline_alarm_24"
@@ -75,11 +75,11 @@
         android:id="@+id/mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="37dp"
+
         android:layout_marginEnd="37dp"
-        android:layout_marginBottom="41dp"
+        android:layout_marginBottom="121dp"
         android:backgroundTint="#00aac5"
         android:rotationX="8"
         android:src="@drawable/ic_baseline_menu_24"
