--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -24,5 +24,8 @@
         <attr name="task_layout4" format="color">
 
         </attr>
+        <attr name="timer_layout" format="color">
+
+        </attr>
     </declare-styleable>
 </resources>
