--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:autoSizeTextType="uniform"
+        android:autoSizeTextType="none"
         android:background="?attr/welcome"
         android:fontFamily="@font/roboto"
         android:paddingTop="25dp"
