--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,9 @@
         android:paddingTop="25dp"
         android:paddingBottom="5dp"
         android:text=""
+        android:textAllCaps="true"
         android:textColor="#00727a"
-        android:textSize="50dp">
+        android:textSize="40dp">
 
     </TextView>
 
